target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/path: /metrics
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: my-app
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.example
    name: my-app
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: my-app
      provider: jkube
      group: com.example
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: my-app
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.example
    name: my-app
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: my-app
      provider: jkube
      group: com.example
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        labels:
          app: my-app
          provider: jkube
          version: 1.0.0-SNAPSHOT
          group: com.example
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: my-app:latest
          imagePullPolicy: IfNotPresent
          name: vertx
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - vertx
        from:
          kind: ImageStreamTag
          name: my-app:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: my-app
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.example
    name: my-app
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: my-app
